--- a/open-streaming-lakehouse-platform/docker/docker-compose.yml
+++ b/open-streaming-lakehouse-platform/docker/docker-compose.yml
@@ -7,4 +7,13 @@ services:
     ports:
       - "9092:9092"
     env_file:
-      - ../.env
+      - path: ../.env
+        required: false
+    environment:
+      KAFKA_CFG_NODE_ID: ${KAFKA_CFG_NODE_ID:-1}
+      KAFKA_CFG_PROCESS_ROLES: ${KAFKA_CFG_PROCESS_ROLES:-broker,controller}
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: ${KAFKA_CFG_CONTROLLER_QUORUM_VOTERS:-1@kafka:9093}
+      KAFKA_CFG_LISTENERS: ${KAFKA_CFG_LISTENERS:-PLAINTEXT://:9092,CONTROLLER://:9093}
+      KAFKA_CFG_ADVERTISED_LISTENERS: ${KAFKA_CFG_ADVERTISED_LISTENERS:-PLAINTEXT://localhost:9092}
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: ${KAFKA_CFG_CONTROLLER_LISTENER_NAMES:-CONTROLLER}
+      ALLOW_PLAINTEXT_LISTENER: ${ALLOW_PLAINTEXT_LISTENER:-yes}
